--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -1,1 +1,24 @@
 @import "tailwind.css";
+
+:root.light {
+  --background: 255 255 255;
+  --foreground: 17 24 39;
+
+  --card: 255 255 255;
+  --card-foreground: 17 24 39;
+
+  --border: 229 231 235;
+  --ring: 59 130 246;
+}
+
+/* Dark */
+:root.dark {
+  --background: 17 24 39;
+  --foreground: 243 244 246;
+
+  --card: 31 41 55;
+  --card-foreground: 243 244 246;
+
+  --border: 55 65 81;
+  --ring: 96 165 250;
+}
